# Snake

./: .gitignore  README.md
snake/: snake.sln
snake/snake/: AutoPlayControllerImpl.cpp  AutoPlayControllerImpl.h  ConsoleFactoryImpl.cpp  ConsoleFactoryImpl.h  ConsoleFruitImpl.cpp  ConsoleFruitImpl.h  ConsoleMenuImpl.cpp  ConsoleMenuImpl.h  ConsoleSnakeImpl.cpp  ConsoleSnakeImpl.h  ConsoleViewerImpl.cpp  ConsoleViewerImpl.h  ControllerImpl.cpp  ControllerImpl.h  IController.h  IFactory.h  IFruit.h  IMenu.h  ISnake.h  ISnakeModel.h  IViewer.h  SecondConsoleFruitImpl.cpp  SecondConsoleFruitImpl.h  SnakeModelImpl.cpp  SnakeModelImpl.h  ThreadWrapper.cpp  ThreadWrapper.h  constants.h  main.cpp  move_to.cpp  move_to.h  snake.vcxproj  snake.vcxproj.filters
tests/: CMakeLists.txt  README.md  conanfile.txt  tests.cpp
